Entrega trabajo práctico Unidad 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 Hola Mundo. Soy yo, el AppComponent
 <app-home></app-home>
+<app-catalogo></app-catalogo>
+<app-registro></app-registro>
+<app-login></app-login>
+<app-detalle></app-detalle>
