--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,7 @@
 <p>Hola <strong>{{nombre}}</strong></p>
 <input type="text" [(ngModel)]="nombre">
 -->
-<p *ngFor="let producto of productos">{{producto.title}}</p>
+<div *ngFor="let producto of productos">
+    <p>{{producto.title | uppercase}}</p>
+    <p>{{producto.price | currency:'ARS'}}</p>
+</div>
