--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-Hola Mundo. Soy yo, el AppComponent
-<app-home></app-home>
-<app-catalogo></app-catalogo>
-<app-registro></app-registro>
-<app-login></app-login>
-<app-detalle></app-detalle>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
